another run, full calibration still fails

--- a/tests/test_calibration_notebook.ipynb
+++ b/tests/test_calibration_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal.added_par)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fa68c236975464dacef42a2f257ddcc",
+       "model_id": "38444e0fd5ae43cc966bd3cb4eb50360",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "532396ca1ac942dd8c07782f8181fa6e",
+       "model_id": "3e0717e7231d43c2aa0d07cbd7fed91a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,23 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fab5f4738f0>"
+       "<matplotlib.collections.PathCollection at 0x7fab6c4ca090>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1582df746e4b47caae9424b0316d3c6e",
+       "model_id": "fc281494a48340e1a42ade4ad2ed094f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,70 +338,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Target(pnr=0, x=969.173076923077, y=786.9423076923077, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=1, x=1063.0696202531644, y=784.9430379746835, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=2, x=1158.938202247191, y=781.376404494382, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=3, x=1250.907766990291, y=777.1213592233009, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=4, x=1346.0, y=774.6222222222223, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=6, x=766.5333333333334, y=639.5333333333333, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=7, x=862.0824175824176, y=636.521978021978, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=8, x=956.3000000000001, y=632.8444444444444, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=9, x=1051.41, y=628.32, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=10, x=1146.657894736842, y=625.078947368421, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=11, x=1239.683908045977, y=620.9367816091954, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=12, x=1332.7530120481929, y=617.5, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=13, x=754.7210526315789, y=485.67894736842106, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=14, x=849.9574468085107, y=480.6595744680851, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=15, x=942.4885057471264, y=477.51149425287355, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=16, x=1037.695652173913, y=474.30434782608694, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=17, x=1132.5344827586207, y=469.98275862068965, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=18, x=1226.0, y=469.0, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=19, x=1320.7323232323233, y=465.9646464646465, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=21, x=771.5, y=345.0, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=22, x=866.5744680851063, y=341.0851063829787, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=23, x=961.6707317073171, y=339.3414634146342, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=24, x=1055.6797752808989, y=335.12921348314603, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=25, x=1150.5, y=332.62359550561797, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=26, x=1246.1603773584905, y=330.0, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=27, x=1338.5760869565217, y=327.65217391304344, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=28, x=977.0764705882352, y=196.46470588235294, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=29, x=1073.0961538461538, y=194.02884615384616, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=30, x=1168.078947368421, y=190.3421052631579, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=31, x=1262.9454545454546, y=188.02727272727273, n=0, nx=0, ny=0, sumg=0, tnr=-1),\n",
-       " Target(pnr=32, x=1357.7474226804125, y=186.13917525773195, n=0, nx=0, ny=0, sumg=0, tnr=-1)]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cal_points = read_calblock(work_dir / cal_par.fixp_name)\n",
     "\n",
     "\n",
     "fix = np.c_[cal_points.x, cal_points.y, cal_points.z]\n",
     "sorted_pix = sortgrid(cal, control, len(fix), fix, 25, targs)\n",
-    "sorted_pix"
+    "# sorted_pix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f722d8d883564f8e8dd4aca3e8169ced",
+       "model_id": "499da1dac7ab4c76896f71d93b29764f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,21 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# missing manual marking and then sortgrid\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -535,32 +495,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 1. 0.]\n"
+      "[-4.26900237e-02  5.73391700e-03 -1.39472861e-04 -5.12653671e-02\n",
+      "  1.98159747e-03  1.65955829e+00 -8.42088588e-02]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'sol' is not defined",
+     "ename": "ValueError",
+     "evalue": "array must not contain infs or NaNs",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# print(sol.x)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n\u001b[0;32m----> 3\u001b[0m cal\u001b[38;5;241m.\u001b[39mset_added_par(\u001b[43msol\u001b[49m\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n\u001b[1;32m      5\u001b[0m full_calibration(cal, ref_pts, targets, control, orient_par)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[91], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m cal\u001b[38;5;241m.\u001b[39mset_added_par(sol\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mfull_calibration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msorted_pix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontrol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morient_par\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n",
+      "File \u001b[0;32m~/Documents/repos/openptvpy/openptv-python/openptv_python/orientation.py:877\u001b[0m, in \u001b[0;36mfull_calibration\u001b[0;34m(cal, ref_pts, img_pts, cparam, orient_par, dm, drad)\u001b[0m\n\u001b[1;32m    874\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    875\u001b[0m     targs \u001b[38;5;241m=\u001b[39m img_pts\n\u001b[0;32m--> 877\u001b[0m residuals \u001b[38;5;241m=\u001b[39m \u001b[43morient\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcparam\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morient_par\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merr_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdrad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdrad\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    879\u001b[0m \u001b[38;5;66;03m# free(orip)\u001b[39;00m\n\u001b[1;32m    881\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m residuals \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    882\u001b[0m     \u001b[38;5;66;03m# free(residuals)\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/repos/openptvpy/openptv-python/openptv_python/orientation.py:497\u001b[0m, in \u001b[0;36morient\u001b[0;34m(cal, cpar, nfix, fix, pix, flags, sigmabeta, dm, drad)\u001b[0m\n\u001b[1;32m    487\u001b[0m     sumP \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m P[i]\n\u001b[1;32m    489\u001b[0m \u001b[38;5;66;03m# Gauss Markoff Model - least square adjustment of redundant information\u001b[39;00m\n\u001b[1;32m    490\u001b[0m \u001b[38;5;66;03m# contained both in the spatial intersection and the resection\u001b[39;00m\n\u001b[1;32m    491\u001b[0m \u001b[38;5;66;03m# see [1], eq. 23\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    494\u001b[0m \u001b[38;5;66;03m#     Xh[:, :numbers], yh, rcond=None\u001b[39;00m\n\u001b[1;32m    495\u001b[0m \u001b[38;5;66;03m# )\u001b[39;00m\n\u001b[0;32m--> 497\u001b[0m beta, residuals, rank, singular_values \u001b[38;5;241m=\u001b[39m \u001b[43mscipy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlstsq\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    498\u001b[0m \u001b[43m    \u001b[49m\u001b[43mXh\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43mnumbers\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapack_driver\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgelsy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m    499\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;66;03m# Interpret the results\u001b[39;00m\n\u001b[1;32m    502\u001b[0m \u001b[38;5;66;03m# print(\u001b[39;00m\n\u001b[1;32m    503\u001b[0m \u001b[38;5;66;03m#     f\"Coefficients (beta): {beta} \\n \\\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    509\u001b[0m \n\u001b[1;32m    510\u001b[0m \u001b[38;5;66;03m# stopflag\u001b[39;00m\n\u001b[1;32m    511\u001b[0m stopflag \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m~/mambaforge/envs/openptvpy/lib/python3.12/site-packages/scipy/linalg/_basic.py:1225\u001b[0m, in \u001b[0;36mlstsq\u001b[0;34m(a, b, cond, overwrite_a, overwrite_b, check_finite, lapack_driver)\u001b[0m\n\u001b[1;32m   1115\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1116\u001b[0m \u001b[38;5;124;03mCompute least-squares solution to equation Ax = b.\u001b[39;00m\n\u001b[1;32m   1117\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1222\u001b[0m \n\u001b[1;32m   1223\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1224\u001b[0m a1 \u001b[38;5;241m=\u001b[39m _asarray_validated(a, check_finite\u001b[38;5;241m=\u001b[39mcheck_finite)\n\u001b[0;32m-> 1225\u001b[0m b1 \u001b[38;5;241m=\u001b[39m \u001b[43m_asarray_validated\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck_finite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheck_finite\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1226\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(a1\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m   1227\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInput array a should be 2D\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/mambaforge/envs/openptvpy/lib/python3.12/site-packages/scipy/_lib/_util.py:306\u001b[0m, in \u001b[0;36m_asarray_validated\u001b[0;34m(a, check_finite, sparse_ok, objects_ok, mask_ok, as_inexact)\u001b[0m\n\u001b[1;32m    304\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmasked arrays are not supported\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    305\u001b[0m toarray \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray_chkfinite \u001b[38;5;28;01mif\u001b[39;00m check_finite \u001b[38;5;28;01melse\u001b[39;00m np\u001b[38;5;241m.\u001b[39masarray\n\u001b[0;32m--> 306\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    307\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m objects_ok:\n\u001b[1;32m    308\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;129;01mis\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdtype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mO\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "File \u001b[0;32m~/mambaforge/envs/openptvpy/lib/python3.12/site-packages/numpy/lib/function_base.py:630\u001b[0m, in \u001b[0;36masarray_chkfinite\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    628\u001b[0m a \u001b[38;5;241m=\u001b[39m asarray(a, dtype\u001b[38;5;241m=\u001b[39mdtype, order\u001b[38;5;241m=\u001b[39morder)\n\u001b[1;32m    629\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mchar \u001b[38;5;129;01min\u001b[39;00m typecodes[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAllFloat\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misfinite(a)\u001b[38;5;241m.\u001b[39mall():\n\u001b[0;32m--> 630\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    631\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray must not contain infs or NaNs\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m a\n",
+      "\u001b[0;31mValueError\u001b[0m: array must not contain infs or NaNs"
      ]
     }
    ],
    "source": [
     "# print(sol.x)\n",
-    "print(cal.added_par)\n",
     "cal.set_added_par(sol.x)\n",
     "print(cal.added_par)\n",
-    "full_calibration(cal, ref_pts, targets, control, orient_par)\n",
+    "full_calibration(cal, ref_pts, sorted_pix, control, orient_par)\n",
     "print(cal.added_par)"
    ]
   },
