full calibration still fails

--- a/tests/test_calibration_notebook.ipynb
+++ b/tests/test_calibration_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,14 @@
     "%matplotlib widget\n",
     "\n",
     "\n",
-    "from skimage.io import imread\n"
+    "from skimage.io import imread\n",
+    "\n",
+    "from typing import List\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38444e0fd5ae43cc966bd3cb4eb50360",
+       "model_id": "746408574951496a99795298567e443e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e0717e7231d43c2aa0d07cbd7fed91a",
+       "model_id": "4c25ba0def51408da94f8af4a24ee433",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,23 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fab6c4ca090>"
+       "<matplotlib.collections.PathCollection at 0x7fd397e3b890>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc281494a48340e1a42ade4ad2ed094f",
+       "model_id": "6d4bae34e34b40b89ca8cbb3bf8b334a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "499da1dac7ab4c76896f71d93b29764f",
+       "model_id": "a9a534bf19d94ed598d45e4d08020e12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,12 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
-    "def added_par_residual(added_par_array, ref_pts, targs, control, cal):\n",
+    "def added_par_residual(added_par_array, ref_pts: np.ndarray, targs: List[Target], control, cal):\n",
     "    # print(calibration_array)\n",
     "    # print(ref_pts)\n",
     "    # print(targs)\n",
@@ -470,22 +472,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_points = np.hstack([cal_points.x , cal_points.y, cal_points.z])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sol.x=array([-4.26900237e-02,  5.73391700e-03, -1.39472861e-04, -5.12653671e-02,\n",
-      "        1.98159747e-03,  1.65955829e+00, -8.42088588e-02])\n"
+      "sol.x=array([-4.26831007e-02,  5.73365388e-03, -1.39471877e-04, -5.12636281e-02,\n",
+      "        1.98655738e-03,  1.65948514e+00, -8.41335831e-02])\n"
      ]
     }
    ],
    "source": [
     "x0 = np.array(cal.added_par.tolist())\n",
     "\n",
-    "sol = opt.minimize(added_par_residual, x0, args=(ref_pts, sorted_pix, control, cal), method='Nelder-Mead', tol=1e-6)\n",
+    "sol = opt.minimize(added_par_residual, x0, args=(ref_points, sorted_pix, control, cal), method='Nelder-Mead', tol=1e-7)\n",
     "print(f\"{sol.x=}\")\n",
     "# print(sol.x - np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]))\n",
     "\n"
@@ -500,15 +511,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-4.26900237e-02  5.73391700e-03 -1.39472861e-04 -5.12653671e-02\n",
-      "  1.98159747e-03  1.65955829e+00 -8.42088588e-02]\n"
+      "[-4.26831007e-02  5.73365388e-03 -1.39471877e-04 -5.12636281e-02\n",
+      "  1.98655738e-03  1.65948514e+00 -8.41335831e-02]\n"
      ]
     },
     {
@@ -518,7 +529,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[91], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m cal\u001b[38;5;241m.\u001b[39mset_added_par(sol\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mfull_calibration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msorted_pix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontrol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morient_par\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n",
+      "Cell \u001b[0;32mIn[66], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m cal\u001b[38;5;241m.\u001b[39mset_added_par(sol\u001b[38;5;241m.\u001b[39mx)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mfull_calibration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref_points\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msorted_pix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontrol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morient_par\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cal\u001b[38;5;241m.\u001b[39madded_par)\n",
       "File \u001b[0;32m~/Documents/repos/openptvpy/openptv-python/openptv_python/orientation.py:877\u001b[0m, in \u001b[0;36mfull_calibration\u001b[0;34m(cal, ref_pts, img_pts, cparam, orient_par, dm, drad)\u001b[0m\n\u001b[1;32m    874\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    875\u001b[0m     targs \u001b[38;5;241m=\u001b[39m img_pts\n\u001b[0;32m--> 877\u001b[0m residuals \u001b[38;5;241m=\u001b[39m \u001b[43morient\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcparam\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref_pts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morient_par\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merr_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdrad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdrad\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    879\u001b[0m \u001b[38;5;66;03m# free(orip)\u001b[39;00m\n\u001b[1;32m    881\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m residuals \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    882\u001b[0m     \u001b[38;5;66;03m# free(residuals)\u001b[39;00m\n",
       "File \u001b[0;32m~/Documents/repos/openptvpy/openptv-python/openptv_python/orientation.py:497\u001b[0m, in \u001b[0;36morient\u001b[0;34m(cal, cpar, nfix, fix, pix, flags, sigmabeta, dm, drad)\u001b[0m\n\u001b[1;32m    487\u001b[0m     sumP \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m P[i]\n\u001b[1;32m    489\u001b[0m \u001b[38;5;66;03m# Gauss Markoff Model - least square adjustment of redundant information\u001b[39;00m\n\u001b[1;32m    490\u001b[0m \u001b[38;5;66;03m# contained both in the spatial intersection and the resection\u001b[39;00m\n\u001b[1;32m    491\u001b[0m \u001b[38;5;66;03m# see [1], eq. 23\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    494\u001b[0m \u001b[38;5;66;03m#     Xh[:, :numbers], yh, rcond=None\u001b[39;00m\n\u001b[1;32m    495\u001b[0m \u001b[38;5;66;03m# )\u001b[39;00m\n\u001b[0;32m--> 497\u001b[0m beta, residuals, rank, singular_values \u001b[38;5;241m=\u001b[39m \u001b[43mscipy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlstsq\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    498\u001b[0m \u001b[43m    \u001b[49m\u001b[43mXh\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43mnumbers\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapack_driver\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgelsy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m    499\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;66;03m# Interpret the results\u001b[39;00m\n\u001b[1;32m    502\u001b[0m \u001b[38;5;66;03m# print(\u001b[39;00m\n\u001b[1;32m    503\u001b[0m \u001b[38;5;66;03m#     f\"Coefficients (beta): {beta} \\n \\\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    509\u001b[0m \n\u001b[1;32m    510\u001b[0m \u001b[38;5;66;03m# stopflag\u001b[39;00m\n\u001b[1;32m    511\u001b[0m stopflag \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
       "File \u001b[0;32m~/mambaforge/envs/openptvpy/lib/python3.12/site-packages/scipy/linalg/_basic.py:1225\u001b[0m, in \u001b[0;36mlstsq\u001b[0;34m(a, b, cond, overwrite_a, overwrite_b, check_finite, lapack_driver)\u001b[0m\n\u001b[1;32m   1115\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1116\u001b[0m \u001b[38;5;124;03mCompute least-squares solution to equation Ax = b.\u001b[39;00m\n\u001b[1;32m   1117\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1222\u001b[0m \n\u001b[1;32m   1223\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1224\u001b[0m a1 \u001b[38;5;241m=\u001b[39m _asarray_validated(a, check_finite\u001b[38;5;241m=\u001b[39mcheck_finite)\n\u001b[0;32m-> 1225\u001b[0m b1 \u001b[38;5;241m=\u001b[39m \u001b[43m_asarray_validated\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck_finite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheck_finite\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1226\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(a1\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m   1227\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInput array a should be 2D\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
@@ -532,7 +543,7 @@
     "# print(sol.x)\n",
     "cal.set_added_par(sol.x)\n",
     "print(cal.added_par)\n",
-    "full_calibration(cal, ref_pts, sorted_pix, control, orient_par)\n",
+    "full_calibration(cal, ref_points, sorted_pix, control, orient_par)\n",
     "print(cal.added_par)"
    ]
   },
