--- a/tests/test_calibration_notebook.ipynb
+++ b/tests/test_calibration_notebook.ipynb
@@ -340,10 +340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/user/Downloads/For_Alex_test_34/cal/target_on_a_side.txt\n"
+     ]
+    }
+   ],
    "source": [
+    "print(work_dir / cal_par.fixp_name)\n",
     "cal_points = read_calblock(work_dir / cal_par.fixp_name)\n",
     "\n",
     "\n",
